# DACA

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
benchmarks/: __init__.py  bench_activations.py  bench_all.py  bench_attention.py  bench_layernorm.py  bench_matmul.py
daca/: __init__.py  __main__.py
daca/autotune/: __init__.py  benchmark.py
daca/blas/: __init__.py  bmm.py  matmul.py  workspace.py
daca/comm/: __init__.py  parallel.py
daca/compat/: __init__.py  config_rewriter.py  cuda_shim.py  mindformers_patches.py  mindspore_patches.py
daca/compile/: __init__.py  fusion.py  graph_mode.py
daca/docs/: hardware_profile.md  operator_gap.md  optimization_guide.md  vs_cuda.md
daca/nn/: __init__.py  activations.py  attention.py  embedding.py  layernorm.py  rmsnorm.py  rotary.py  softmax.py
daca/runtime/: __init__.py  detect.py  device.py  dtype.py  memory.py
daca/tools/: __init__.py
examples/: __init__.py  patch_existing_code.py  quickstart.py  train_with_daca.py
tests/: __init__.py  conftest.py  test_blas.py  test_compat.py  test_compile.py  test_integration.py  test_nn.py  test_runtime.py
tools/: doctor.py  probe.py
